--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -2,3 +2,8 @@
 # About the project
 
 *Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the 'Useful links' page in the mooc area (chapter 1) for instructions.*
+
+
+Data Science is the hot subject of our times. Thanks to the course, hopefully we will build abilities to work and manage with data. 
+
+Github repository of mine: https://github.com/sgizm/IODS-project
